--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             <path d="M9.99992 10.8333C11.3806 10.8333 12.4999 9.71404 12.4999 8.33333C12.4999 6.95262 11.3806 5.83333 9.99992 5.83333C8.61921 5.83333 7.49992 6.95262 7.49992 8.33333C7.49992 9.71404 8.61921 10.8333 9.99992 10.8333Z" stroke="#A1A1AA" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
 
-          Florianópolis, SC
+          Curitiba, PR
         </div>
 
         <div class="fields">
